补充格式化相关信息;格式化-策略模式

--- a/2TextEditor/Lexi/Lexi/Lexi.vcxproj
+++ b/2TextEditor/Lexi/Lexi/Lexi.vcxproj
@@ -166,6 +166,7 @@
     <ClCompile Include="LexiFormatting\LexiCompositor.cpp" />
     <ClCompile Include="LexiFormatting\LexiSimpleCompositor.cpp" />
     <ClCompile Include="LexiGlyph\LexiCharacter.cpp" />
+    <ClCompile Include="LexiGlyph\LexiGlyph.cpp" />
     <ClCompile Include="LexiGlyph\LexiRow.cpp" />
     <ClCompile Include="LexiGlyph\LexiWindow.cpp" />
     <ClCompile Include="LexiGlyph\LexiRectangle.cpp" />
