--- a/2TextEditor/Lexi/Lexi/Lexi.vcxproj.filters
+++ b/2TextEditor/Lexi/Lexi/Lexi.vcxproj.filters
@@ -80,6 +80,9 @@
     <ClCompile Include="LexiFormatting\LexiSimpleCompositor.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="LexiGlyph\LexiGlyph.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Lexi.rc">
