新增用户界面修饰结构-Decorator模式

--- a/2TextEditor/Lexi/Lexi/Lexi.vcxproj
+++ b/2TextEditor/Lexi/Lexi/Lexi.vcxproj
@@ -148,6 +148,9 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="LexiDecorate\LexiBorder.h" />
+    <ClInclude Include="LexiDecorate\LexiMonoGlyph.h" />
+    <ClInclude Include="LexiDecorate\LexiScroller.h" />
     <ClInclude Include="LexiFormatting\LexiComposition.h" />
     <ClInclude Include="LexiFormatting\LexiCompositor.h" />
     <ClInclude Include="LexiFormatting\LexiSimpleCompositor.h" />
@@ -162,6 +165,9 @@
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="LexiDecorate\LexiBorder.cpp" />
+    <ClCompile Include="LexiDecorate\LexiMonoGlyph.cpp" />
+    <ClCompile Include="LexiDecorate\LexiScroller.cpp" />
     <ClCompile Include="LexiFormatting\LexiComposition.cpp" />
     <ClCompile Include="LexiFormatting\LexiCompositor.cpp" />
     <ClCompile Include="LexiFormatting\LexiSimpleCompositor.cpp" />
