--- a/2TextEditor/Lexi/Lexi/Lexi.vcxproj
+++ b/2TextEditor/Lexi/Lexi/Lexi.vcxproj
@@ -160,6 +160,8 @@
     <ClInclude Include="LexiGlyph\LexiRow.h" />
     <ClInclude Include="LexiGlyph\LexiWindow.h" />
     <ClInclude Include="LexiGlyph\LexiRectangle.h" />
+    <ClInclude Include="LexiGUI\LexiGUIFactory.h" />
+    <ClInclude Include="LexiGUI\LexiMotifFactory.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
@@ -177,6 +179,7 @@
     <ClCompile Include="LexiGlyph\LexiWindow.cpp" />
     <ClCompile Include="LexiGlyph\LexiRectangle.cpp" />
     <ClCompile Include="Lexi.cpp" />
+    <ClCompile Include="LexiGUI\LexiMotifFactory.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
