--- a/2TextEditor/Lexi/Lexi/Lexi.vcxproj.filters
+++ b/2TextEditor/Lexi/Lexi/Lexi.vcxproj.filters
@@ -39,9 +39,6 @@
     <ClInclude Include="LexiGlyph\LexiRow.h">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="LexiGlyph\LexiWindow.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
     <ClInclude Include="LexiFormatting\LexiComposition.h">
       <Filter>头文件</Filter>
     </ClInclude>
@@ -66,6 +63,9 @@
     <ClInclude Include="LexiGUI\LexiMotifFactory.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="LexiWindow\LexiWindow.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -81,9 +81,6 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="LexiGlyph\LexiRow.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="LexiGlyph\LexiWindow.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="LexiFormatting\LexiCompositor.cpp">
@@ -108,6 +105,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="LexiGUI\LexiMotifFactory.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="LexiWindow\LexiWindow.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
